--- a/AdvancedSelenium_E18/test-output/emailable-report.html
+++ b/AdvancedSelenium_E18/test-output/emailable-report.html
@@ -9,37 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num attn">5</td><td class="num attn">1</td><td class="num">89,599</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">74,799</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Login.LoginTest</td><td><a href="#m0">LoginTest1</a></td><td rowspan="1">1743260366475</td><td rowspan="1">2030</td></tr><tr><th colspan="4">Test &#8212; retried</th></tr><tr class="retriedeven"><td rowspan="5">Login.LoginTest</td><td><a href="#m1">LoginTest1</a></td><td rowspan="5">1743260354098</td><td rowspan="5">2048</td></tr><tr class="retriedeven"><td><a href="#m2">LoginTest1</a></td></tr><tr class="retriedeven"><td><a href="#m3">LoginTest1</a></td></tr><tr class="retriedeven"><td><a href="#m4">LoginTest1</a></td></tr><tr class="retriedeven"><td><a href="#m5">LoginTest1</a></td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">CampaignTest.CreateCampaign</td><td><a href="#m6">CreateCampaignTest</a></td><td rowspan="1">1743260308063</td><td rowspan="1">14702</td></tr><tr class="passedeven"><td><a href="#m7">createCampaignWithDateTest</a></td><td rowspan="1">1743260323858</td><td rowspan="1">13413</td></tr><tr class="passedodd"><td rowspan="1">ContactTest.createContact</td><td><a href="#m8">createContactWithCampaignTest</a></td><td rowspan="1">1743260372030</td><td rowspan="1">22043</td></tr><tr class="passedeven"><td rowspan="1">ProductTest.CreateProduct</td><td><a href="#m9">CreateProductTest</a></td><td rowspan="1">1743260340501</td><td rowspan="1">7152</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">CampaignTest.CreateCampaign</td><td><a href="#m0">CreateCampaignTest</a></td><td rowspan="1">1743777962616</td><td rowspan="1">14690</td></tr><tr class="passedeven"><td><a href="#m1">createCampaignWithDateTest</a></td><td rowspan="1">1743777978310</td><td rowspan="1">13411</td></tr><tr class="passedodd"><td rowspan="1">ContactTest.createContact</td><td><a href="#m2">createContactWithCampaignTest</a></td><td rowspan="1">1743778011161</td><td rowspan="1">21881</td></tr><tr class="passedeven"><td rowspan="1">Login.LoginTest</td><td><a href="#m3">LoginTest1</a></td><td rowspan="1">1743778005814</td><td rowspan="1">2165</td></tr><tr class="passedodd"><td rowspan="1">ProductTest.CreateProduct</td><td><a href="#m4">addProductTest</a></td><td rowspan="1">1743777995207</td><td rowspan="1">7267</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">Login.LoginTest#LoginTest1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Validation is failed expected [http://49.249.28.218:8098/dashboar] but found [http://49.249.28.218:8098/dashboard]
-	at Login.LoginTest.LoginTest1(LoginTest.java:63)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Login.LoginTest#LoginTest1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Validation is failed expected [http://49.249.28.218:8098/dashboar] but found [http://49.249.28.218:8098/dashboard]
-	at Login.LoginTest.LoginTest1(LoginTest.java:63)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Login.LoginTest#LoginTest1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Validation is failed expected [http://49.249.28.218:8098/dashboar] but found [http://49.249.28.218:8098/dashboard]
-	at Login.LoginTest.LoginTest1(LoginTest.java:63)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Login.LoginTest#LoginTest1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Validation is failed expected [http://49.249.28.218:8098/dashboar] but found [http://49.249.28.218:8098/dashboard]
-	at Login.LoginTest.LoginTest1(LoginTest.java:63)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">Login.LoginTest#LoginTest1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Validation is failed expected [http://49.249.28.218:8098/dashboar] but found [http://49.249.28.218:8098/dashboard]
-	at Login.LoginTest.LoginTest1(LoginTest.java:63)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">Login.LoginTest#LoginTest1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Validation is failed expected [http://49.249.28.218:8098/dashboar] but found [http://49.249.28.218:8098/dashboard]
-	at Login.LoginTest.LoginTest1(LoginTest.java:63)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">CampaignTest.CreateCampaign#CreateCampaignTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Campaign Banner111311 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">CampaignTest.CreateCampaign#createCampaignWithDateTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Campaign Banner111164 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">ContactTest.createContact#createContactWithCampaignTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Contact Smith_1572 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">ProductTest.CreateProduct#CreateProductTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Product Macbook Air7731 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">CampaignTest.CreateCampaign#CreateCampaignTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Campaign Banner11535 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">CampaignTest.CreateCampaign#createCampaignWithDateTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Campaign Banner11144 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">ContactTest.createContact#createContactWithCampaignTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Contact Smith_338 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Login.LoginTest#LoginTest1</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Validation is passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">ProductTest.CreateProduct#addProductTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Product Macbook Air6068 added successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
